# tusur

./: .gitignore  Lab1_task1_report.md  LaboratoryWork.md  README.md
Lab_1/: Lab_1.pro  main.cpp  readme.md  test.md
Lab_1/task_2_1/: main_task_2_1.cpp  task_2_1.pro
Lab_1/task_2_2/: main_task_2_2.cpp  task_2_2.pro
Lab_1/task_2_3/: enterdata.cpp  enterdata.h  main.cpp  task1.h  task2.h  task3.h  task_2_3.pro
Lab_2/: Lab_2.pro  header.h  main.cpp  task1.cpp  test.md
Lab_3/: Lab_3.pro  main.cpp  task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h  task7.cpp  task7.h  test.md
Lab_4/: Lab_4.pro  Lab_4.pro.user.4.8-pre1  fact.cpp  fact.h  fib.cpp  fib.h  main.cpp  sorting.cpp  sorting.h  task10.cpp  task10.h  task4c.cpp  task4c.h  task5.cpp  task5.h  task6.cpp  task6.h  task8.cpp  task8.h  task9.cpp  task9.h  test.md
dop_task/Lab_2_calc/: CMakeLists.txt  instr.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycalc.cpp  mycalc.h
dop_task/Lab_5_cicloid/: CMakeLists.txt  falcirc.cpp  falcirc.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
other/: README.md
